fix jumpy navbar brand

--- a/staticfiles/css/app.css
+++ b/staticfiles/css/app.css
@@ -290,6 +290,7 @@ body {
   transition: all 0.2s;
 }
 
+
 #lesson-lesson {
   background-color:#415ebe;
   color:white;
@@ -337,8 +338,6 @@ body {
 
 .navbar-brand {
   transition: 0.5s;
-  padding-top:0;
-  margin-bottom: 0.1em;
   font-size:4em;
   font-weight:500;
   color:white;
@@ -349,6 +348,7 @@ body {
   text-decoration: none;
   color:white;
 }
+
 
 .expand {
   font-size: 11em;
@@ -844,6 +844,17 @@ footer a {
 }
 
 
+.toggler i{
+  color:transparent!important;
+}
+
+.toggler i:hover{
+  color:transparent!important;
+  cursor: pointer;
+  text-transform: none;
+  color:white!important;
+}
+
 .nav-link {
   display: inline-block;
   padding: 0.35em 1.2em;
@@ -901,7 +912,9 @@ footer a {
 
 /* before 600 */
 @media screen and (max-width: 800px) , screen and (max-height: 800px) {
-
+  .toggler i{
+    color:white!important;
+  }
   .contact-box {
     width: 100%!important;
     margin: 0 auto!important;
@@ -962,17 +975,16 @@ footer a {
     padding-left:0rem;
     padding-top: 17%;
   }
-
   .expand {
     font-size: 7em;
     color:white;
     font-weight:500;
-    transition: 0s;
     padding-top:0.6em;
     margin:0;
     position: fixed;
     transition: 1s;
   }
+
   #kid-logo {
     display:none;
   }
